--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
             </div>
             <nav>
                 <ul>
+             
                     <li><a href="index.html">Home</a></li>
                     <li class="current"><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
@@ -43,8 +44,10 @@
                 <p>
                     Therefore, I decide to do something to produce healthy, cheap food (even free for those who cannot buy). With the idea of ( Mobile Restaurant) which can make job opportunities, culture exchange, providing free food once per week or month (based on income) for refugees and the people who are living in bad conditions on the streets or dont have access to healthy food around the world.
                 </p>
+                
                 <p class="dark">
-                Poverty is something that I have been through in my childhood, I have well understanding of the feeling when your father disappointedly says “I am not able to find food for my children they have to find by themselves”. I was seven years old when I start making rugs and carpets instead of going to school, playing in park and hanging out with friends. Although, it was a hard time for me as well as for my family but I was enjoying being to gather with my siblings and my parents. Still I remember when we were making fun of something and start laughing and couldn’t stop 😄. I remember the winters nights when my father was reading stories of ✨ Shahnama ✨ and poems of ✨ Bedel Dehlawi ✨. Now I am thankful of the lessons I learned at that time, and having the beautiful memories with my loved ones.
+                    this changes brought to practice closing issue with keyword "close"
+               Although, it was a hard time for me as well as for my family but I was enjoying being to gather with my siblings and my parents. Still I remember when we were making fun of something and start laughing and couldn’t stop 😄. I remember the winters nights when my father was reading stories of ✨ Shahnama ✨ and poems of ✨ Bedel Dehlawi ✨. Now I am thankful of the lessons I learned at that time, and having the beautiful memories with my loved ones.
                 </p>
 
             </article>
