--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                 </p>
                 
                 <p class="dark">
-                    this changes brought to practice closing issue with keyword "close"
+                <p> this changes brought to practice closing issue with keyword "close"</p>
                Although, it was a hard time for me as well as for my family but I was enjoying being to gather with my siblings and my parents. Still I remember when we were making fun of something and start laughing and couldn’t stop 😄. I remember the winters nights when my father was reading stories of ✨ Shahnama ✨ and poems of ✨ Bedel Dehlawi ✨. Now I am thankful of the lessons I learned at that time, and having the beautiful memories with my loved ones.
                 </p>
 
