--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        
         <meta charset="=utf-8">
         <meta name="viewport" content="width=device-width">
         <meta name="author" content="Tahmina Rasoli">
@@ -8,6 +9,7 @@
             Acme Web Design / Welcome
         </title>
         <link rel="stylesheet" href="style.css">
+        <script src='init.js'></script>
     </head>
     <header>
         <div class="container">
